# wave-home2

./: .cursorrules  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
bed_net/: export_ncnn.py  preprocess_set0-0.py  training.py
bed_net/networks/: PointNetV1nCNNV1.py
cmake/: FindJsoncpp.cmake  FindSQLite3.cmake  asio.cmake  deps.cmake  drogon.cmake  drogon_minimal.cmake  embed_info_plist.cmake  frontend.cmake  macos.cmake  ncnn.cmake  ncnn_minimal.cmake  options.cmake  platform.cmake  platform_aarch64.cmake  sherpa_onnx.cmake  sherpa_onnx_minimal.cmake  site.cmake  tuyapp.cmake  wave.cmake
cmake/fetch/: jsoncpp.cmake  sqlite3.cmake  stb.cmake
docs/: entire_plan.md  feedback.md  hrbr.md  style.md
scripts/: build-all.sh  build-front.sh  build-server.sh  build-site.sh  build.sh  clean.sh  download-all-models.sh  download-stt-model.sh  download-tts-model.sh  stat.sh
scripts/lib/: cmake-build.sh
scripts/test/: build-test-ir.sh  build-test-llm.sh  build-test-srs.sh  build-test-tts.sh  build-test-tuya.sh
site/: index.html
site/css/: style.css
site/js/: app.js
sleep-net/: pcr_loader.py
sleep-net/networks/: PointNetV1nCNNV1.py
sleep-net/scripts/: analyze_set0.py  export0-0.py  preprocess_set0-0.py  training0-0.py
src/common/ir/: commands.txt  ir_remote.cpp  ir_remote.h  ir_remote2.cpp  ir_remote2.h
src/common/llm/: lm_studio_client.cpp  lm_studio_client.h
src/common/r4sn/: iq_protocol.cpp  iq_protocol.h
src/common/util/: arg_parser.cpp  arg_parser.h  exe_path.cpp  exe_path.h  ir_remote.cpp  ir_remote.h  spinner.cpp  spinner.h
src/r4sn/cmake/: aarch64-linux-gnu.cmake
src/r4sn/docs/: CALIBRATION_DATA.md  EEPROM_CALIBRATION_APPLICATOR.md  physical-antenna.txt  plot_physical_antenna.py  research.md  virtual-antenna.txt
src/r4sn/iq-server/: CMakeLists.txt  calibration_coefs.h  cube_mmap.cpp  cube_mmap.hpp  frame_sync.cpp  frame_sync.hpp  main.cpp  radar_params.hpp  signal_processor.cpp  signal_processor.hpp  steering_cache.hpp  tcp_server.cpp  tcp_server.hpp  va_geometry.h
src/r4sn/scripts/: build-iq-server.sh  deploy.env.example  deploy.sh  iq_client.py
src/r4sn/ti_vital_signs/: DSPF_sp_fftSPxSP_cn.c  DSPF_sp_fftSPxSP_cn.h  atan2sp_i.h  cplx_types.h  dpc.c  linker.cmd  main.c  makefile_ccs_bootimage_gen  vital_signs.syscfg  vital_signs_xwrl64xx_appss.projectspec  vitalsign.c  vitalsign.h  vitalsign_with_tracking.c
src/test/test-iq/: CMakeLists.txt  cli-tool.py  gui.py  iq_client.py  requirements.txt  run-gui.sh
src/test/test-iq/docs/: rdm-beamforming.md  vital-signs.md
src/test/test-iq/targets/: targets_1m_7bin.txt  targets_range_power_0.225_2m.txt
src/test/test-ir/: CMakeLists.txt  main.cpp
src/test/test-llm/: CMakeLists.txt  main.cpp  token.txt
src/test/test-srs/: CMakeLists.txt  main.cpp
src/test/test-stt/: CMakeLists.txt  main.cpp  mic_capture.cpp  mic_capture.h
src/test/test-tts/: CMakeLists.txt  main.cpp
src/test/test-tuya/: CMakeLists.txt  main.cpp
src/test/test-vital/: iq_client.py  main.py  replay_csv.py  requirements.txt  verify_chirp_phase.py  vital_signs.py
src/wave-server/: CMakeLists.txt  api_controller.cpp  api_controller.h  config.json  main.cpp  ncnn_context.cpp  ncnn_context.h  wave_server.cpp  wave_server.h  whdefs.h
src/wave-server/app/: app_setting.cpp  app_setting.h  app_state.cpp  app_state.h
src/wave-server/auxiliary/: stb_image.cpp
src/wave-server/core/: coredefs.h  json.h  logger.cpp  logger.h  task_queue.cpp  task_queue.h
src/wave-server/device/: device.cpp  device.h  device_manager.cpp  device_manager.h  room.h
src/wave-server/device/input/: wave_cam.h  wave_mic.h
src/wave-server/device/interface/: audio.h  camera.h  radar.h
src/wave-server/device/output/: tizen_tv.h  tuya_blind.h
src/wave-server/device/platform/: ir_device.cpp  ir_device.h  srs_r4sn.cpp  srs_r4sn.h  tuya_ep2h.cpp  tuya_ep2h.h
src/wave-server/device/protocol/: ir_remote.cpp  ir_remote.h
src/wave-server/nn/: frame_aggregator.cpp  frame_aggregator.h  frame_encoder.cpp  frame_encoder.h  gesture_pipeline.h  sleep_pipeline.h
src/wave-server/service/: llm_client.cpp  llm_client.h  stt_service.cpp  stt_service.h  tts_service.cpp  tts_service.h
src/wave-server/web/: server.cpp  server.h
src/wave-server/web/http/: api_controller.cpp  api_controller.h  push_notification.cpp  push_notification.h
